# bt_assignment

./: CMakeLists.txt  Dockerfile  README.md  backend.cpp  code_format.sh  conanfile.txt  config.json  database.cpp  database.hpp  dev_env.sh  main.cpp  types.hpp
data/: data.json
include/backend/: backend.hpp  controller.hpp  types.hpp
scripts/: code_format.sh
src/: CMakeLists.txt  backend.cpp  backend.hpp  controller.cpp  server.cpp
tests/: CMakeLists.txt  backend_test.cpp
